# bevy-ffmpeg

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: bevy_media_player.rs
src/: engine.rs  frame_pool.rs  lib.rs  session.rs  worker.rs
