[package]
name = "bevy-ffmpeg"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
ffmpeg-next = "8.0.0"
ffmpeg-sys-next = "8.0.1"
bevy = { version = "0.18.0", default-features = false, features = ["2d"] }
num-rational = "0.4.2"

# bevy_media_player dependencies
bevy_egui = { version = "0.39.0", optional = true }

[features]
examples = ["bevy_egui"]

[[example]]
name = "bevy_media_player"
path = "examples/bevy_media_player.rs"
required-features = ["examples"]
